# cmake-gtest-boilerplate

./: .gitignore  CMakeLists.txt  README.md  conftest.py  pytest.ini
.github/workflows/: ci.yml
app/: CMakeLists.txt
hello/: CMakeLists.txt
src/: hello.cpp  hello.h  main.cpp
tests/: CMakeLists.txt  hello_test.cpp  test_main.cpp
tests/python/: test_hello.py
